--- a/style.css
+++ b/style.css
@@ -1,23 +1,65 @@
-html,body 
-{
-  background-color: aqua;
-  text-align: center;
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
 }
-#form
-{
-  font-size: 18px;
+
+.container {
+    width: 80%;
+    max-width: 600px;
+    margin: 30px auto;
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+border-radius: 5px;
+}
+
+h1 {
 text-align: center;
-position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 50%;
-  transform: translate(-50%, -50%);
-  background: #28cf9d;
-  border-radius: 20px;
-  padding: 50px;
+color: #333;
 }
-.submit{
-  font-size: 22px;
-  background-color:rgb(119, 255, 114);
-  border-radius: 5px;
+
+form {
+display: grid;
+grid-gap: 10px;
+}
+
+label {
+display: block;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+width: 100%;
+padding: 5px;
+border: 1px solid #ccc;
+border-radius: 3px;
+font-size: 14px;
+}
+
+select {
+width: 100%;
+padding: 5px;
+font-size: 14px;
+}
+
+input[type="radio"],
+input[type="checkbox"] {
+margin-right: 5px;
+}
+
+input[type="submit"] {
+width: 100%;
+padding: 10px;
+background-color: #0099cc;
+color: #fff;
+font-size: 16px;
+border: none;
+cursor: pointer;
+border-radius: 5px;
+text-transform: uppercase;
+}
+
+input[type="submit"]:hover {
+background-color: #006699;
 }
