--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     width: 80%;
     max-width: 600px;
     margin: 30px auto;
-    background-color: #fff;
+    background-color: #fba6a6;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 border-radius: 5px;
