--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ margin-right: 5px;
 input[type="submit"] {
 width: 100%;
 padding: 10px;
-background-color: #0099cc;
+background-color: #00c7cc;
 color: #fff;
 font-size: 16px;
 border: none;
